[package]
name = "helix-commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-core = { version = "0.6", path = "../helix-core" }
helix-lsp = { version = "0.6", path = "../helix-lsp" }
helix-view = { version = "0.6", path = "../helix-view" }
helix-vcs = { version = "0.6", path = "../helix-vcs" }

anyhow = "1"
arc-swap = "1.6.0"
log = "0.4"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.7"
