[package]
name = "helix-commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
helix-core = { version = "0.6", path = "../helix-core" }
helix-view = { version = "0.6", path = "../helix-view" }
helix-vcs = { version = "0.6", path = "../helix-vcs" }
log = "0.4"
once_cell = "1.18"
serde = "1.0"
signal-hook = "0.3"
